--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "next": "15.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "styled-components": "^6.1.13"
+    "styled-components": "^6.1.13",
+    "swr": "^2.2.5"
   },
   "devDependencies": {
+    "@types/react": "18.3.12",
     "eslint": "^8.57.1",
     "eslint-config-next": "15.0.2"
   }
