--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@mui/joy": "^5.0.0-beta.48",
     "@mui/lab": "^6.0.0-beta.14",
     "@mui/material": "^6.1.6",
+    "@mui/x-date-pickers": "^7.22.1",
+    "dayjs": "^1.11.13",
     "install": "^0.13.0",
     "next": "15.0.2",
     "npm": "^10.9.0",
