--- a/package.json
+++ b/package.json
@@ -9,20 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "3": "^2.1.0",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^6.1.6",
     "@mui/joy": "^5.0.0-beta.48",
     "@mui/lab": "^6.0.0-beta.14",
     "@mui/material": "^6.1.6",
+    "@react-three/fiber": "^8.0.27",
     "install": "^0.13.0",
-    "next": "15.0.2",
+    "next": "^15.0.2",
+    "next-images": "^1.8.5",
     "npm": "^10.9.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-router-dom": "^6.27.0",
     "styled-components": "^6.1.13",
-    "swr": "^2.2.5"
+    "swr": "^2.2.5",
+    "three": "^0.170.0"
   },
   "devDependencies": {
     "eslint": "^8.57.1",
