--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@mui/lab": "^6.0.0-beta.14",
     "@mui/material": "^6.1.6",
     "@mui/x-date-pickers": "^7.22.1",
+    "@tensorflow-models/coco-ssd": "^2.2.3",
+    "@tensorflow/tfjs": "^4.22.0",
     "dayjs": "^1.11.13",
     "install": "^0.13.0",
     "next": "15.0.2",
